# nevi

./: CHANGELOG.md  Cargo.toml  KEYBINDINGS.md  KEYBINDS_ROADMAP.md  LICENSE  README.md
.github/workflows/: rust.yml
src/: file_diff.rs  floating_terminal.rs  harpoon.rs  health.rs  keybind_coverage.rs  labeled_jump.rs  lib.rs  main.rs  markdown_preview.rs  render_damage.rs  tool_installer.rs  vim_oracle.rs
src/commands/: mod.rs
src/config/: keymap.rs  languages.rs  mod.rs
src/copilot/: auth.rs  client.rs  mod.rs  types.rs  utf16.rs
src/editor/: buffer.rs  cursor.rs  macros.rs  marks.rs  mod.rs  register.rs  undo.rs
src/editor/tests/: editing_operators.rs  file_lifecycle.rs  insert_entry.rs  screen_position.rs
src/explorer/: mod.rs
src/finder/: file_picker.rs  grep.rs  keybinds.rs  keybinds.toml  matcher.rs  mod.rs
src/formatter/: mod.rs
src/frecency/: mod.rs
src/git/: mod.rs
src/indent/: mod.rs
src/input/: mod.rs  motion.rs
src/lsp/: client.rs  mod.rs  multi.rs  types.rs  watched_files.rs
src/syntax/: highlighter.rs  mod.rs  theme.rs
src/terminal/: mod.rs
src/theme/: bundled.rs  loader.rs  mod.rs
src/vim_oracle/: editing_cases.rs  insert_entry_cases.rs
themes/: ayu-dark.toml  catppuccin-mocha.toml  dracula.toml  everforest.toml  github-dark.toml  gruvbox.toml  kanagawa.toml  monokai.toml  nightfox.toml  nord.toml  onedark-darker.toml  onedark.toml  palenight.toml  rose-pine.toml  solarized-dark.toml  tokyonight.toml
